# ChangeLog for dev-ruby/facets
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facets/Attic/ChangeLog,v 1.18 2007/07/24 16:27:40 beandog Exp $

  24 Jul 2007; Steve Dibb <beandog@gentoo.org> facets-1.4.5.ebuild:
  amd64 stable, bug 185300

  16 Jul 2007; Markus Rothe <corsair@gentoo.org> facets-1.4.5.ebuild:
  Stable on ppc64; bug #185300

  16 Jul 2007; Raúl Porcel <armin76@gentoo.org> facets-1.4.5.ebuild:
  ia64/x86 stable wrt #185300

*facets-1.8.54 (14 Jul 2007)

  14 Jul 2007; Joshua Nichols <nichoj@gentoo.org> +facets-1.8.54.ebuild:
  Version bump. See bug #185284.

  09 Mar 2007; Tom Gall <tgall@gentoo.org> facets-1.4.5.ebuild:
  added ~ppc64

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

*facets-1.4.5 (07 Dec 2006)

  07 Dec 2006; Nguyễn Thái Ngọc Duy <pclouds@gentoo.org>
  +facets-1.4.5.ebuild:
  Version bump. Ebuild provided by Jimmy.Jazz@gmx.net, #157366

  27 Apr 2006; Marien Zwart <marienz@gentoo.org> files/digest-facets-0.6.3,
  Manifest:
  Fixing SHA256 digest, pass four

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> -facets-0.7.2.ebuild,
  -facets-20051030.ebuild:
  remove old versions

*facets-1.0.3 (17 Apr 2006)

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> +facets-1.0.3.ebuild:
  adding 1.0.3

*facets-1.3.0 (17 Apr 2006)

  17 Apr 2006; Caleb Tennis <caleb@gentoo.org> +facets-1.3.0.ebuild:
  version bump

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org> facets-20051030.ebuild:
  Mark 20051030 ~ia64

*facets-20051030 (29 Oct 2005)

  29 Oct 2005; Michael Kohl <citizen428@gentoo.org> +facets-20051030.ebuild:
  Version bump. Upstream changed version scheme.

  08 Oct 2005; Michael Kohl <citizen428@gentoo.org> facets-0.6.3.ebuild,
  facets-0.7.2.ebuild:
  Added missing IUSE.

*facets-0.7.2 (16 Aug 2005)

  16 Aug 2005; Michael Kohl <citizen428@gentoo.org> facets-0.6.3.ebuild,
  +facets-0.7.2.ebuild: