@@ -1,6 +1,6 @@
-# Copyright 1999-2007 Gentoo Foundation
+# Copyright 1999-2008 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facets/Attic/facets-1.8.54.ebuild,v 1.1 2007/07/14 14:29:37 nichoj Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/facets/Attic/facets-1.8.54.ebuild,v 1.2 2008/02/29 15:18:31 nixnut Exp $
 
 inherit ruby gems
 
@@ -12,7 +12,7 @@ SRC_URI="http://gems.rubyforge.org/gems/${P}.gem"
 
 LICENSE="Ruby"
 SLOT="0"
-KEYWORDS="~amd64 ~ia64 ~ppc64 ~x86"
+KEYWORDS="~amd64 ~ia64 ~ppc ~ppc64 ~x86"
 IUSE=""
 
 DEPEND=">=dev-lang/ruby-1.8.5"
